fixing overflow issue on grid css row with negative margins

--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,11 @@ body {
   margin: 0 auto; 
 }
 
+.row {
+	margin-right: 0px;
+	margin-left: 0px;
+}
+
 .heroImage{
   padding-right: 5%;
 }
